--- a/www/speaker_DIgnazzio.Rmd
+++ b/www/speaker_DIgnazzio.Rmd
@@ -1,5 +1,5 @@
 ---
-title: 'Upcoming Speaker: Catherine DIgnazio'
+title: 'Upcoming Speaker: Catherine DIgnazio, April 7 5pm'
 ---
 
 # Public Lecture: Data Feminism
@@ -17,8 +17,8 @@ As data are increasingly mobilized in the service of governments and corporation
 
 ## Details
 
-- Date and Time:TBD
-- Location: TBD
+- Date and Time:April 7, 5pm-6pm
+- Location: Ford Hall 240
 - Open to the Public
 
 ### Sponsors
