--- a/www/mu_sigma_rho.Rmd
+++ b/www/mu_sigma_rho.Rmd
@@ -13,20 +13,38 @@ library(tidyverse)
 ```
 
 ```{r, eval=FALSE, include=FALSE}
-library(googlesheets)
+library(googlesheets4)
 key <- "1P2ZOOXB5dHwycXZkFYm_3u7M4lEPPm36RJHdMloAZlY"
-gs_auth()
-g <- gs_key(key)
-g <- gs_ls()
-
-# currently not working. Download spreadsheet manually
-
+archive <- read_sheet(key)
 ```
-
 
 ```{r, echo=FALSE, message=FALSE}
 archive <- read_csv(here::here("www", "Mu_Sigma_Rho_DB.csv"))
 ```
+
+```{r, include=FALSE, eval=FALSE}
+potential_nominees <- read_sheet("1BDA98lZeEthJdfRPcZAstP1n6eq5avshMAnrRQUL9sM")
+
+nominees <- potential_nominees %>%
+  mutate(
+    Id = as.numeric(Id),
+    not_eligible = SumOfcredit == 8 & ifelse(is.na(`MTH 246`), FALSE, TRUE)
+  ) %>%
+#  pivot_longer(matches("CSC|SDS|MTH"), names_to = "course", values_to = "taken")
+#    sds291 = sum(c(`MTH 291`, `SDS 291`), na.rm = TRUE)
+  filter(
+    SumOfcredit >= 8, 
+    class %in% c("20", "20J", "21J"),
+    CumGPA > 3.2,
+    !not_eligible
+  ) %>%
+  anti_join(archive, by = "Id")
+
+write_csv(nominees, "mu_sigma_rho_2020.csv")
+```
+
+
+
 
 ```{r mu-sigma-rho, fig.cap="Growth of Mu Sigma Rho inductees.", echo=FALSE}
 archive %>%
