--- a/www/enrollments.Rmd
+++ b/www/enrollments.Rmd
@@ -179,12 +179,14 @@ sds %>%
 ## By graduation year
 
 ```{r enrollment_major_grad_year}
-sds %>%
+by_grad_year <- sds %>%
 #  filter(number == 220) %>%
   group_by(grad_year, is_major) %>%
   summarize(N = n(), num_students = n_distinct(ID)) %>%
-  filter(grad_year > 2008) %>%
-  ggplot(aes(x = grad_year, y = num_students, fill = is_major)) +   
+  filter(grad_year > 2008)
+
+grad_plot <- ggplot(by_grad_year, 
+                    aes(x = grad_year, y = num_students, fill = is_major)) +   
   geom_hline(yintercept = 2502/4/2, linetype = 3) + 
   geom_hline(yintercept = 2502/4/4, linetype = 3) + 
   annotate("text", x = 2013, y = 2502/4/4 + 10, label = "25%", hjust = "left") + 
@@ -197,6 +199,12 @@ sds %>%
   labs(title = "Enrollment in SDS Courses by Graduation Year", 
        subtitle = "2012-present", 
        caption = format(Sys.Date(), "%B %e, %Y"))
+grad_plot
+```
+
+
+```{r enrollment_grad_year_current}
+grad_plot %+% filter(by_grad_year, grad_year <= 2020)
 ```
 
 
