--- a/www/enrollments.Rmd
+++ b/www/enrollments.Rmd
@@ -153,7 +153,7 @@ major_plot %+% by_major_220 +
   labs(title = "Enrollment by Major, 220")
 ```
 
-```{r table_220}
+```{r table_220, message=FALSE}
 library(kableExtra)
 sds %>%
   filter(term_date > 2017, number %in% c(201, 220)) %>%
