--- a/www/awards.Rmd
+++ b/www/awards.Rmd
@@ -25,6 +25,7 @@ The <a href="https://www.fivecolleges.edu/statistics/">Five College Statistics</
 
 ### Awardees
 
+- 2020: Laneé Jung ’20 and Fatima Keita ’20 <cite>(outstanding service to statistics)</cite>
 - 2019: Yue Kuang '19, Zixian Li '19, and Jingyi Liu '19 <cite>(outstanding senior capstone project)</cite>
 - 2018: Paige Patrick 'AC and Rutendo Madziwo '19 <cite>(outstanding service to statistics)</cite>
 - 2017: Abby Doctor '17 <cite>(outstanding senior capstone project)</cite>
