--- a/README.Rmd
+++ b/README.Rmd
@@ -7,3 +7,5 @@ SDS content for the web not managed by college relations
 
 https://smithcollege-sds.github.io/sds-www/
 
+To build this website, knit `www/index.Rmd`. The website's contents will be saved
+in the `docs/` folder
