Updated website building instructions

--- a/README.Rmd
+++ b/README.Rmd
@@ -3,10 +3,20 @@ title: "sds-www"
 output: github_document
 ---
 
-SDS content for the web not managed by college relations
+SDS content for the web not managed by college relations, available at https://smithcollege-sds.github.io/sds-www/
 
-https://smithcollege-sds.github.io/sds-www/
+In order to edit this website:
 
-To build this website, knit `www/index.Rmd`; the website's contents will be saved
-in the `docs/` folder. The contents of `www/_site.yml` determine the layout of the
-webpage: menubar contents, webpage theme, etc.
+1. The layout/style is based on `www/_site.yml`
+1. The contents is based on all `.Rmd` files in the `www/` folder
+
+In order to build this website:
+
+1. If you haven't already
+    + Install the `sds` package following these [instructions](https://github.com/SmithCollege-SDS/sds)
+    + Install the `bannerweb` package
+1. Using Terminal/command line
+    + Navigate to `www/`
+    + Run `make`
+
+The resulting `docs/` folder will contain all `.html` files
