--- a/www/sds_newsletter_2020.Rmd
+++ b/www/sds_newsletter_2020.Rmd
@@ -23,6 +23,8 @@ https://www.facebook.com/groups/665780273559948/) and a Google group. **Please h
 
 #### Randi Garcia
 
+Taught my research seminar PSY 364: Research seminar in Intergroup Relationships for the second time, and SDS 291: Multiple Regression for the first time. Published papers in the Journal of Applied Developmental Psychology and Frontiers in Psychology's section on Gender, Sex and Sexualities. 
+
 #### Katherine Halvorsen
 
 #### Albert Y. Kim
