--- a/www/sds_newsletter_2020.Rmd
+++ b/www/sds_newsletter_2020.Rmd
@@ -23,7 +23,7 @@ https://www.facebook.com/groups/665780273559948/) and a Google group. **Please h
 
 #### Randi Garcia
 
-Taught my research seminar PSY 364: Research seminar in Intergroup Relationships for the second time, and SDS 291: Multiple Regression for the first time. Published papers in the Journal of Applied Developmental Psychology and Frontiers in Psychology's section on Gender, Sex and Sexualities. 
+This crazy year is divided in half by COVID-19! One highlight for me from the before times is that I took five Smith students to the Women in Statistics and Data Science's annual conference held this year in Bellevue Washington. Our flight out of Bradley was cancelled due to a [plane crash](https://www.cnn.com/videos/us/2019/10/02/vintage-aircraft-crashes-at-bradley-international-airport-connecticut.cnn), so we changed our flights to Logan. We then left a wallet in the Valley Transporter van upon arrival at Logan (but got it back!) and then we left a laptop at TSA in route to our gate (but got it back later!). In the end we [MADE it](https://twitter.com/randiLgarcia/status/1179600080829128704)! It was a joy to speak on the plenary panel, "Creating and Sustaining Respectful and Inclusive Community" and to attend my first WSDS! In the Fall semester I also taught my research seminar PSY 364: Research seminar in Intergroup Relationships for the second time, and SDS 291: Multiple Regression for the first time. It was lovely! During COVID times I've picked up several hobbies including gardening, cooking, meditation, reading for pleasure and personal growth, and *beginner* guitar. This year I've published papers in the Journal of Applied Developmental Psychology and Frontiers in Psychology's section on Gender, Sex and Sexualities. I've also recently submitted a paper investigating daily instagram use and women's self-objectification for publication in a psychology journal. 
 
 #### Katherine Halvorsen
 
