added Scott update

--- a/www/sds_newsletter_2020.Rmd
+++ b/www/sds_newsletter_2020.Rmd
@@ -40,6 +40,8 @@ This crazy year is divided in half by COVID-19! One highlight for me from the be
 
 #### Scott LaCombe
 
+[Scott LaCombe](https://scottlacombe.weebly.com/) is joining Smith College this Fall with a joint appointment in Statistical and Data Sciences and Government. He received his PhD in Political Science from the University of Iowa and will be living in New England for the first time. Scott's focus is leveraging data to better understand how public opinion is translated into state policies, and what networks states have formed when developing policy solutions. He is very excited to be teaching in the Fall and exploring the Pioneer Valley. 
+
 #### Miles Ott
 
 #### Sara Stoudt
